# synoptic-paper-engine

./: .gitignore  README.md  master_references.bib  pyproject.toml  references_filtered.bib  references_raw.bib
arxiv_results/: arxiv_results.csv
content_filtered_csv/arxiv_results/: Medium_Relevance.csv
content_filtered_csv/results/: Medium_Relevance.csv
llama_filtered/: llama_filtered_articles.csv
llama_filtered-1/: llama_filtered_articles.csv
log/arxiv_results/: productive_years.csv  prolific_authors.csv  top_papers.csv
log/results/: productive_years-6.csv  prolific_authors-1.csv  top_papers-4.csv
results/: material-1.csv  material-2.csv  output_statistics.csv
results-2/: material-1.csv  output_statistics.csv
spe/: __init__.py  author_search_scholar.py  bibtex_generator.py  cross_validator.py  help_menu.py  llama_filter.py  main.py  parse_query.py  pdf_content_filter.py  preview_step.py  pyarxiv.py  requirements.txt  statistics_analyzer.py
