[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "synoptic-paper-engine"
version = "1.1.0"
authors = [
  { name="Israel Oliveira", email="israeldaoliveira@email.com" },
]
description = "An AI-powered command-line toolkit for advanced academic literature review."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# Dependências OBRIGATÓRIAS (Core do sistema)
dependencies = [
    "requests>=2.31.0",
    "colorama>=0.4.6",
    "tqdm>=4.66.0",
    "numpy>=1.21.0",
    "PyYAML>=6.0",
    "huggingface-hub>=0.20.0",
    "scholarly>=1.7.11",
    "arxiv>=2.1.0",
    "pypdf>=3.17.0",
    "pandas>=1.5.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
llama = ["llama-cpp-python>=0.2.20"]
dev = ["black", "flake8"]

[project.scripts]
spe = "spe.main:main_menu"